fix: flag size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2801,6 +2801,7 @@ body {
 
 .s-header__menu-links li img {
   width: 45px;
+  min-width: 30px;
   height: auto;
   padding: 0;
   margin: 0;
@@ -2814,7 +2815,7 @@ body {
   font-size: 1.6rem;
   color: var(--color-2-lightest);
   text-decoration: none;
-  padding: 0 10px;
+  padding: 0 7px;
   transition: color 0.3s ease;
 }
 
